# DataAnnotationQA

./: .gitignore  BBOX_FORMAT_CORRECTION.md  COMPLETE_GUIDE.md  DL_FEATURES_ESSENTIAL.md  DL_TRAINING_PIPELINE.md  FEATURES_INVENTORY.md  FINAL_SUMMARY.md  POST_REFACTORING_SUMMARY.md  README.md  REFACTORING_GUIDE.md  SUMMARY.md  TDENGINE_EXPORT_GUIDE.md  TDENGINE_TROUBLESHOOTING.md  TEXT_RENDERING_FIX.md  VIDEO_EXPORT_GUIDE.md  VIDEO_EXPORT_SUMMARY.md  YOLO_VISUALIZATION_GUIDE.md  annotation_format.tsx  create_annotation_video.py  diagnose_tdengine.py  export_from_tdengine.sh  export_yolo_annotations.py  prepare_training_data.py  pyproject.toml  visualize_annotations.py  visualize_raw_thermal.py
Data/Gen3_Annotated_Data_MVP/Annotations/: SL18_R1_annotation.json  SL18_R2_annotation.json
Data/Gen3_Annotated_Data_MVP/Raw_from_TDengine/: MATCHING_REPORT.md
cursor_readme/: CHANGELOG.md  PYTORCH_DATALOADER_GUIDE.md  QUICK_START.md  REFACTORING_DECISION.txt  TDENGINE_EXPORT_GUIDE.md  THERMAL_DATA_FORMAT.md
src/data_pipeline/: __init__.py  thermal_dataset.py
src/thermal_data_processing/: __init__.py  data_loader.py  frame_processor.py  streaming_data_loader.py
src/visualize_annotations/: __init__.py  loader.py  video_exporter.py  visualizer.py
tests/: README.md  __init__.py  diagnose_tdengine.py  run_all_tests.py  test_diagnose_tdengine.py  test_training_pipeline.py
unittest/: diagnose_tdengine.py  example_training_pipeline.py
